# rebuilderd-debian-buildinfo-crawler

./: .dockerignore  Cargo.toml  Dockerfile  README.md
migrations/2022-01-27-123114_init/: down.sql  up.sql
src/: args.rs  buildinfo.rs  db.rs  deb.rs  html.rs  main.rs  schema.rs  utils.rs
src/models/: artifact.rs  buildinfo.rs  mod.rs
